# Synaris-OS

./: .env.example  .gitignore  API.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONSTITUTION.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  STYLE_GUIDE.md  WHY.md  ai.md  decisions.md  docker-compose.yml  rag.md  railway.json  research.md  synaris_test.db-shm  synaris_test.db-wal  vercel.json
backend/: .env.example  .env.production.example  Dockerfile  pyproject.toml  requirements-core.txt  requirements.txt  run_local.py  start_local.sh  synaris_local.db  synaris_test.db-shm  synaris_test.db-wal
backend/app/: main.py
backend/app/ai/: __init__.py  classifier.py  evaluator.py  prompts.py  spaced_repetition.py  summarizer.py
backend/app/ai/providers/: __init__.py  base.py  gemini.py  groq.py  key_manager.py  litellm.py  openrouter.py
backend/app/api/: __init__.py  analytics.py  auth.py  dependencies.py  feedback.py  health.py  memory.py  messages.py  quizzes.py  sessions.py  study_plan.py  user.py
backend/app/infrastructure/: __init__.py  config.py  constants.py  database.py  logging.py
backend/app/knowledge/: __init__.py  cache.py  indexer.py  models.py  pipeline.py
backend/app/knowledge/cache/: __init__.py
backend/app/knowledge/chunking/: __init__.py  semantic.py  types.py
backend/app/knowledge/citation/: __init__.py
backend/app/models/: __init__.py  concept_mastery.py  learning_session.py  memory_summary.py  message.py  quiz.py  study_plan.py  user.py
backend/app/orchestration/: __init__.py  router.py
backend/app/security/: __init__.py  abuse.py  guardrails.py  patterns.py  rate_limit.py
backend/migrations/: alembic.ini  env.py
backend/tests/: conftest.py  test_abuse_detection.py  test_auth.py  test_auth_dependency.py  test_feedback.py  test_health.py  test_memory_api.py  test_messages.py  test_quizzes.py  test_rate_limit.py  test_security_guardrails.py  test_sessions.py  test_spaced_repetition.py  test_user_profile.py
(+87 files in other folders)
