[project]
name = "synaris-backend"
version = "0.1.0"
description = "Synaris AI Learning Operating System - Backend"
requires-python = ">=3.12"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
# Long lines in classifier.py and summarizer.py are in string literals (regex patterns, AI prompts)
"app/ai/classifier.py" = ["E501"]
"app/ai/summarizer.py" = ["E501"]
"app/api/messages.py" = ["E402"]
"tests/conftest.py" = ["E402"]
"tests/test_quizzes.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_configs = true
ignore_missing_imports = true
follow_imports = "silent"
exclude = [
    "migrations/",
    "tests/",
    "venv/",
]

[[tool.mypy.overrides]]
module = [
    "app.knowledge.sources.*",
    "app.ai.providers.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    # Starlette testclient httpx deprecation — fix pending upstream release
    "ignore:Using `httpx` with `starlette.testclient`",
    # google-genai library uses _UnionGenericAlias (Python 3.17 deprecation)
    "ignore:.*_UnionGenericAlias.*:DeprecationWarning:google.genai",
]
